--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A Phaser Game",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "npm run build && webpack-dev-server --port=8000"
+    "build:prod": "webpack --config webpack.prod.config.js",
+    "build:dev": "webpack --config webpack.dev.config.js",
+    "start": "webpack-dev-server --port=8000 --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,8 @@
   "author": "Steffen Hageland",
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "webpack": "^4.20.0",
